monitor/prometheus/prometheus-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingressroute
  namespace: prometheus
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prometheus.ltc.tsphotoclicks.net`)
      middlewares:
        - name: authentik-middleware
          namespace: authentik
      services:
        - name: prometheus
          port: 9090
  tls:
    secretName: prometheus-internal-secret
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: prometheus
spec:
  selector:
    app: prometheus
  ports:
    - port: 9090
      targetPort: 9090
